--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <a href="#">Preguntas</a>
     </nav>
 
-    <section id="descripcion">
-        <h2>Descripción</h2>
-        <p>Hernavia es un proyecto que busca impulsar cambios positivos en la sociedad, fomentando la unión, el cuidado de los espacios verdes, la innovación y el acceso a oportunidades y servicios que beneficien a la comunidad. Buscamos generar un entorno de colaboración y crecimiento, dejando abiertas nuevas iniciativas que contribuyan al bienestar y desarrollo colectivo.</p>
+    <section id="¿Que es Hernavia?">
+            <h2>Que es Hernavia?</h2>
+        <p>Hernavia es un proyecto que busca dar identidad hernaviana a la gente y acompañarla activamente en este propósito. Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales. Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora. En resumen, la identidad hernaviana se sostiene sobre la naturaleza la paz y la innovacion. </p>
     </section>
 
     <section id="principios">
@@ -121,4 +121,5 @@
 
 </body>
 </html>
+
 
