--- a/index.html
+++ b/index.html
@@ -89,16 +89,18 @@
         <a href="#">Documentos</a>
         <a href="#">Noticias</a>
         <a href="#">Preguntas</a>
+        <a href="#">Simbloz</a>
+         <a href="#">¿Como unirme?</a>
     </nav>
 
     <section id="¿Que es Hernavia?">
-            <h2>Que es Hernavia?</h2>
+            <h2>¿Que es Hernavia?</h2>
         <p>Hernavia es un proyecto que busca dar identidad hernaviana a la gente y acompañarla activamente en este propósito. Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales. Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora. En resumen, la identidad hernaviana se sostiene sobre la naturaleza la paz y la innovacion. </p>
     </section>
 
-    <section id="principios">
-        <h2>Principios</h2>
-        <p>Esta comunidad se guía por los principios de unión, cohesión, paz, fraternidad, verdad y no violencia, así como el respeto y cuidado de la naturaleza y de la comunidad. Buscamos generar un entorno seguro, inclusivo y colaborativo donde cada miembro aporte al bienestar común, fomentando la participación activa y el desarrollo cultural.</p>
+    <section id="¿Donde se encuentra?">
+        <h2>¿Donde se encuentra?</h2>
+        <p>Hernavia nace en Colombia espesificamente en el municipio Gachanzipa donde puesdes encontrar sus proyectos y toda su administracion aun en etapa inicial. </p>
     </section>
 
     <section id="bandera">
@@ -109,12 +111,12 @@
     <section id="significado">
         <h2>Significado de los colores</h2>
         <ul>
-            <li><strong>Verde:</strong> simboliza la naturaleza, su cuidado esencial y la innovación.</li>
-            <li><strong>Blanco:</strong> representa la paz, cohesión, unión y fraternidad.</li>
-            <li><strong>Amarillo:</strong> refleja las raíces colombianas.</li>
+            <li><strong>Verde:</strong>Representa la naturaleza. Su tono particular, menos común entre banderas, simboliza también la innovación. Con una distribución del 40%, refleja la gran importancia que tiene este principio en Hernavia..</li>
+            <li><strong>Blanco:</strong>Simboliza la paz, y también valores como la cohesión, la verdad y la fraternidad. Al estar ubicado en el centro de la bandera, representa la centralidad de estos ideales dentro del proyecto..</li>
+            <li><strong>Amarillo:</strong>Colocado en la franja inferior, representa las raíces con Colombia, reforzando el vínculo cultural y el origen desde el cual nace Hernavia.</li>
         </ul>
     </section>
-
+    
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
@@ -122,4 +124,79 @@
 </body>
 </html>
 
+<section id="documentos">
+    <h2>Documentos</h2>
+    <p>Aquí irán los enlaces y resúmenes de documentos importantes de Hernavia.</p>
+</section>
 
+<section id="noticias">
+    <h2>Noticias</h2>
+    <p>Espacio para publicar actualizaciones, eventos y novedades.</p>
+</section>
+
+<section id="preguntas">
+    <h2>Preguntas frecuentes</h2>
+    <p>Respuestas a dudas comunes sobre Hernavia.</p>
+</section>
+
+<section id="simbloz">
+    <h2>simbloz</h2>
+    <p>Muestra los simboloz de Hernavia.</p>
+    </section>
+
+<section id="¿como participar?">
+    <h2>Como ser ciudadano</h2>
+    <p>Proceso para volverse un ciudadano.</p>
+    </section>
+
+<!-- Documentos -->
+<section id="documentos">
+    <h2>Documentos</h2>
+    <p>Aquí podrás encontrar los documentos principales de Hernavia:</p>
+    <ul>
+        <li>📄 Constitución Hernaviana (pendiente)</li>
+        <li>🌱 Plan Ambiental (pendiente)</li>
+        <li>📘 Reglamento Ciudadano (pendiente)</li>
+    </ul>
+    <p style="color:gray; text-align:center;">(Puedes reemplazar esto por texto o enlaces de descarga cuando los tengas listos)</p>
+</section>
+
+<!-- Noticias -->
+<section id="noticias">
+    <h2>Noticias</h2>
+    <div class="placeholder">
+        <p>😅 Ups... este apartado no tiene información por ahora.<br>
+        Vuelve pronto para ver las actualizaciones.</p>
+    </div>
+</section>
+
+<!-- Preguntas -->
+<section id="preguntas">
+    <h2>Preguntas</h2>
+    <div class="placeholder">
+        <p>😅 Ups... este apartado no tiene información por ahora.<br>
+        Vuelve pronto para ver las actualizaciones.</p>
+    </div>
+</section>
+
+<!-- Símbolos -->
+<section id="simbolos">
+    <h2>Símbolos</h2>
+    <p>(Aquí podrás encontrar los símbolos de Hernavia. Próximamente.)</p>
+</section>
+
+<!-- Cómo entrar -->
+<section id="comoentrar">
+    <h2>¿Cómo entrar?</h2>
+    <div class="placeholder">
+        <p>😅 Ups... este apartado no tiene información por ahora.<br>
+        Mientras tanto, puedes acercarte a la sede principal.</p>
+    </div>
+</section>
+
+ .placeholder {
+    text-align: center;
+    color: gray;
+    font-style: italic;
+    margin: 20px 0;
+}
