--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nación Hernaviana</title>
+    <title>Hernavia</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
 
     <header>
-        <h1>Nación Hernaviana</h1>
+        <h1>Hernavia</h1>
     </header>
 
     <nav>
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
