--- a/Documentos.html
+++ b/Documentos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentos - Nación Hernaviana</title>
+    <title>Documentos - Hernavia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
