--- a/carta.html
+++ b/carta.html
@@ -39,12 +39,11 @@
     <section class="carta">
         <h2>Preámbulo</h2>
         <p>
-            Nosotros, el pueblo hernaviano, nacidos de un sueño y luchando por cumplirlo,
-            declaramos nuestra unión en una sola comunidad, guiados por los principios
+            Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios
             de respeto, justicia, innovación, progreso y fraternidad.
         </p>
 
-        <h3>Artículo 1 – Liderazgo Provisional</h3>
+        <h3>Artículo 1 – Liderazgo</h3>
         <p>
             El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia.
             Tendrá poder total para tomar decisiones administrativas, políticas y sociales
