--- a/Documentos.html
+++ b/Documentos.html
@@ -23,8 +23,8 @@
     <section>
         <h2>Carta Fundacional</h2>
         <p>
-            La Carta Fundacional de Hernavia establece los principios, la organización
-            y los deberes de la comunidad. Es el documento que guía a Hernavia en su etapa inicial.
+            La Carta Fundacional de Hernavia es una carta corta de dos paginas que sirve como "constitucion" para Hernavia detallando sobre el Arconte como autoridad maxima, principios fundamentales como el cuidado de la naturaleza el respeto y entre ciudadanos y respeto general, la busqueda de innovacion y la participacion activa
+            luego detallas las obligaciones de los ciudadanos como el aporte al desarrollo de la comunidad el respeto a Hernvai y a las reglas que se den, muestra brevemente los objetivos de innovacion cuidado de la naturaleza civicos y economicos, muestra sus simboloz junto al significado de la bandera y la transitoriedad de la carta.
         </p>
         <a href="carta.html" style="display:inline-block; margin-top:10px; 
             padding:10px 15px; background-color:#006A44; color:white; 
