--- a/Documentos.html
+++ b/Documentos.html
@@ -23,34 +23,31 @@
     <section>
         <h2>Carta Fundacional</h2>
         <p>
-        La <strong>Carta Fundacional de Hernavia</strong> es un documento corto, pensado como 
+        La Carta Fundacional de Hernavia es un documento corto, pensado como 
         la base de nuestra identidad y organización. Funciona como una “constitución” inicial 
         que guía los pasos del proyecto mientras crece y se consolida.
     </p>
 
     <p>
-        En ella se establece al <strong>Arconte</strong> como autoridad provisional, encargado 
+        En ella se establece al Arconte como maxima autoridad, encargado 
         de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan 
-        instituciones más amplias. También recoge los <strong>principios fundamentales</strong>, 
+        instituciones más amplias. También recoge los principios fundamentales, 
         como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, 
         la búsqueda de innovación y la fraternidad con otras culturas.
     </p>
 
     <p>
-        Además, describe las <strong>obligaciones de los ciudadanos</strong>, que incluyen 
+        Además, describe las obligaciones de los ciudadanos, que incluyen 
         aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender 
-        la paz y contribuir al progreso común. Señala también <strong>objetivos iniciales</strong> 
+        la paz y contribuir al progreso común. Señala también objetivos iniciales
         como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica 
         y promover un desarrollo económico propio.
     </p>
 
     <p>
-        La Carta dedica un espacio a los <strong>símbolos de Hernavia</strong>, en especial la 
+        La Carta dedica un espacio a los símbolos de Hernavia, en especial la 
         bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. 
-        Finalmente, aclara que se trata de un documento <strong>transitorio</strong>, que podrá 
-        transformarse en el futuro en una constitución más completa, adaptada al crecimiento 
-        de la comunidad.
-        </p>
+        Finalmente, aclara que se trata de un documento transitorio que podria transformarse en un futuro en una carta mas completa.
         <a href="carta.html" style="display:inline-block; margin-top:10px; 
             padding:10px 15px; background-color:#006A44; color:white; 
             text-decoration:none; border-radius:5px;">
