--- a/Documentos.html
+++ b/Documentos.html
@@ -58,5 +58,24 @@
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
+    section>
+    <h2>Leyes Transitorias</h2>
+    <p>
+        Las <strong>Leyes Transitorias de Hernavia</strong> son un conjunto de normas provisionales 
+        que guían el funcionamiento de la comunidad mientras se consolida la organización. 
+        Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, 
+        las penalizaciones por incumplimiento, la participación en votaciones y asambleas, 
+        la administración de fondos y la eliminación de datos personales en casos de renuncia.
+    </p>
+
+    <p>
+        Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación 
+        y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
+        siempre respetando los principios de respeto, paz, innovación y unión.
+    </p>
+
+    <a href="leyes-completas.html" class="boton">Leer las leyes completas</a>
+</section>
+
 </body>
 </html>
