--- a/carta.html
+++ b/carta.html
@@ -86,7 +86,7 @@
         </ol>
 
         <h3>Artículo 5 – Carácter Transitorio</h3>
-        <p>
+       
             Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
             crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
             con la participación del pueblo.
@@ -95,7 +95,9 @@
         </p>
 
         <h3>Artículo 6 – Símbolos</h3>
-        <p>
+         <p>
+             <h2>Bandera</h2>
+        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
             La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.
         </p>
         <p>
