--- a/simbolos.html
+++ b/simbolos.html
@@ -1,8 +1,8 @@
 <section id="simbolos">
     <h2>Símbolos de Hernavia</h2>
 
-<h3>Bandera</h3>
-        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
+    <h3>Bandera</h3>
+    <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
     <p>La bandera simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
 
     <h3>Lema y Frase</h3>
@@ -10,31 +10,37 @@
     <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
 
     <h3>Himno</h3>
-    <p>Coro
-Un sueño de nación unida,
-buscando la paz e innovación.
-Hermandad amarilla, un sueño por cumplir,
-¡historia hay que hacer ya!
-Estrofa 1 
-Verde natural, naturaleza que cuidar,
-tono singular, innovación al avanzar.
-Blanco para paz, dice mucho más unión y fraternidad,
-cohesión, verdad y solidaridad.
-Amarillo radiante, camino y hermandad,
-¡la fuerza del pueblo nos hará avanzar!
-Estrofa 2 
-Pueblo que avanza con paso constante,
-honor en la voz y mirada brillante.
-Astucia y coraje en cada labor,
-Hernavia florece con fuerza y valor.
-Con manos sinceras forjamos verdad,
-soñando el futuro que hoy germinará.
-Estrofa 3 
-Con paso sereno forjamos nuestro andar,
-como un pueblo fuerte, juntos sin parar.
-Nuestro sueño crece y no se detendrá,
-hacia el mañana juntos vamos a marchar.
-Con lucha y respeto vivir en verdad,
-¡la voz Hernaviana jamás callará!
-</p>
+    <div class="himno">
+        <p><strong>Coro:</strong><br>
+        Un sueño de nación unida,<br>
+        buscando la paz e innovación.<br>
+        Hermandad amarilla, un sueño por cumplir,<br>
+        ¡historia hay que hacer ya!</p>
+
+        <p><strong>Estrofa 1:</strong><br>
+        Verde natural, naturaleza que cuidar,<br>
+        tono singular, innovación al avanzar.<br>
+        Blanco para paz, dice mucho más unión y fraternidad,<br>
+        cohesión, verdad y solidaridad.<br>
+        Amarillo radiante, camino y hermandad,<br>
+        ¡la fuerza del pueblo nos hará avanzar!</p>
+
+        <p><strong>Estrofa 2:</strong><br>
+        Pueblo que avanza con paso constante,<br>
+        honor en la voz y mirada brillante.<br>
+        Astucia y coraje en cada labor,<br>
+        Hernavia florece con fuerza y valor.<br>
+        Con manos sinceras forjamos verdad,<br>
+        soñando el futuro que hoy germinará.</p>
+
+        <p><strong>Estrofa 3:</strong><br>
+        Con paso sereno forjamos nuestro andar,<br>
+        como un pueblo fuerte, juntos sin parar.<br>
+        Nuestro sueño crece y no se detendrá,<br>
+        hacia el mañana juntos vamos a marchar.<br>
+        Con lucha y respeto vivir en verdad,<br>
+        ¡la voz hernaviana jamás callará!</p>
+    </div>
+    
+
 </section>
