--- a/Documentos.html
+++ b/Documentos.html
@@ -1,41 +1,17 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentos - Hernavia</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Documentos de Hernavia</h1>
-    </header>
-
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="preguntas.html">Preguntas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="unirme.html">¿Cómo unirme?</a>
-    </nav>
-
-    <section>
-        <h2>Carta Fundacional</h2>
-        <p>
+<section>
+    <h2>Carta Fundacional</h2>
+    <p>
         La Carta Fundacional de Hernavia es un documento corto, pensado como 
         la base de nuestra identidad y organización. Funciona como una “constitución” inicial 
         que guía los pasos del proyecto mientras crece y se consolida.
     </p>
-
     <p>
-        En ella se establece al Arconte como maxima autoridad, encargado 
+        En ella se establece al Arconte como máxima autoridad, encargado 
         de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan 
         instituciones más amplias. También recoge los principios fundamentales, 
         como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, 
         la búsqueda de innovación y la fraternidad con otras culturas.
     </p>
-
     <p>
         Además, describe las obligaciones de los ciudadanos, que incluyen 
         aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender 
@@ -43,22 +19,19 @@
         como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica 
         y promover un desarrollo económico propio.
     </p>
-
     <p>
         La Carta dedica un espacio a los símbolos de Hernavia, en especial la 
         bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. 
-        Finalmente, aclara que se trata de un documento transitorio que podria transformarse en un futuro en una carta mas completa.
-        <a href="carta.html" style="display:inline-block; margin-top:10px; 
-            padding:10px 15px; background-color:#006A44; color:white; 
-            text-decoration:none; border-radius:5px;">
-            Leer completa
-        </a>
-    </section>
+        Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.
+    </p>
+    <a href="carta.html" style="display:inline-block; margin-top:10px; 
+        padding:10px 15px; background-color:#006A44; color:white; 
+        text-decoration:none; border-radius:5px;">
+        Leer completa
+    </a>
+</section>
 
-    <footer>
-        &copy; 2025 Hernavia - Proyecto Cultural
-    </footer>
-    section>
+<section>
     <h2>Leyes Transitorias</h2>
     <p>
         Las <strong>Leyes Transitorias de Hernavia</strong> son un conjunto de normas provisionales 
@@ -67,15 +40,12 @@
         las penalizaciones por incumplimiento, la participación en votaciones y asambleas, 
         la administración de fondos y la eliminación de datos personales en casos de renuncia.
     </p>
-
     <p>
         Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación 
         y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
         siempre respetando los principios de respeto, paz, innovación y unión.
     </p>
-
-    <a href="leyes-completas.html" class="boton">Leer las leyes completas</a>
 </section>
 
-</body>
-</html>
+
+  
