--- a/Documentos.html
+++ b/Documentos.html
@@ -1,4 +1,5 @@
 <section>
+<Head>
     <h2>Carta Fundacional</h2>
     <p>
         La Carta Fundacional de Hernavia es un documento corto, pensado como 
