--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav>
         <a href="index.html">Inicio</a>
         <a href="Documentos.html">Documentos</a>
-        <a href="Noticias.html">Noticias</a>
-        <a href="Preguntas.html">Preguntas</a>
-        <a href="Simbolos.html">Símbolos</a>
-        <a href="Unirme.html">¿Cómo unirme?</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="preguntas.html">Preguntas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirme?</a>
     </nav>
 
     <section id="que-es">
@@ -53,6 +53,7 @@
 
 </body>
 </html>
+
 
 
 
