--- a/Documentos.html
+++ b/Documentos.html
@@ -33,6 +33,7 @@
 </section>
 
 <section>
+     <Head>
     <h2>Leyes Transitorias</h2>
     <p>
         Las <strong>Leyes Transitorias de Hernavia</strong> son un conjunto de normas provisionales 
