--- a/Documentos.html
+++ b/Documentos.html
@@ -48,6 +48,9 @@
         siempre respetando los principios de respeto, paz, innovación y unión.
     </p>
     <a href="leyes-completas.html" class="boton">Leer las leyes completas</a>
+            <footer>
+        &copy; 2025 Hernavia - Proyecto Cultural
+    </footer>
 </section>
 
 
