--- a/Documentos.html
+++ b/Documentos.html
@@ -45,7 +45,7 @@
         y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
         siempre respetando los principios de respeto, paz, innovación y unión.
     </p>
-    <a href="leyes-completas.html" class="boton">Leer las leyes completas</a>
+    <a href="Leyes transitorias.html" class="boton">Leer las leyes completas</a>
 </section>
 
 <footer>
