--- a/simbolos.html
+++ b/simbolos.html
@@ -12,7 +12,7 @@
     <h3>Himno</h3>
     <div class="himno">
         <p><strong>Coro:</strong><br>
-        Un sueño de nación unida,<br>
+        Un sueño de Hernavia unida,<br>
         buscando la paz e innovación.<br>
         Hermandad amarilla, un sueño por cumplir,<br>
         ¡historia hay que hacer ya!</p>
@@ -41,6 +41,6 @@
         Con lucha y respeto vivir en verdad,<br>
         ¡la voz hernaviana jamás callará!</p>
     </div>
-    
-
 </section>
+`
+
