--- a/Documentos.html
+++ b/Documentos.html
@@ -17,7 +17,7 @@
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
         <a href="simbolos.html">Símbolos</a>
-        <a href="unirme.html">¿Cómo unirme?</a>
+        <a href="unirme.html">¿Cómo unirse?</a>
     </nav>
 
     <section>
@@ -46,7 +46,10 @@
             bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. 
             Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.
         </p>
-        <a href="carta.html" class="boton">Leer completa</a>
+        <div class="botones">
+            <a href="carta.html" class="boton">Leer completa</a>
+            <a href="índice.html" class="boton">Volver</a>
+        </div>
     </section>
 
     <section>
@@ -63,7 +66,10 @@
             y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
             siempre respetando los principios de respeto, paz, innovación y unión.
         </p>
-        <a href="Leyes transitorias.html" class="boton">Leer las leyes completas</a>
+        <div class="botones">
+            <a href="Leyes transitorias.html" class="boton">Leer las leyes completas</a>
+            <a href="índice.html" class="boton">Volver</a>
+        </div>
     </section>
 
     <footer>
@@ -71,6 +77,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
