--- a/noticias.html
+++ b/noticias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias - Hernavia</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo.css">
     <style>
         .ups {
             text-align: center;
@@ -12,12 +12,25 @@
             margin-top: 50px;
             font-size: 1.5em;
         }
+        .botones {
+            text-align: center;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Noticias</h1>
     </header>
-    <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
+
+    <div class="ups">
+        Ups… este apartado no tiene información por ahora, espera a que se actualice.
+    </div>
+
+    <div class="botones">
+        <a href="índice.html" class="boton">Volver</a>
+    </div>
+
 </body>
 </html>
+
