--- a/Documentos.html
+++ b/Documentos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentos - Hernavia</title>
-    <link rel="stylesheet" href="estilo.css">
-</head>
+    <title>Hernavia</title>
+    <link rel="stylesheet" href="style.css"> 
+</head>head>
 <body>
     <header>
         <h1>Documentos de Hernavia</h1>
