--- a/Documentos.html
+++ b/Documentos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hernavia</title>
-    <link rel="stylesheet" href="style.css"> 
-</head>head>
+    <title>Documentos - Hernavia</title>
+    <link rel="stylesheet" href="estilo.css">
+</head>
 <body>
     <header>
         <h1>Documentos de Hernavia</h1>
@@ -20,19 +20,49 @@
         <a href="unirme.html">¿Cómo unirse?</a>
     </nav>
 
-    <section>
+    <section class="section">
         <h2>Carta Fundacional</h2>
-        <p>La Carta Fundacional de Hernavia es un documento corto, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
-        <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
-        <p>Además, describe las obligaciones de los ciudadanos: aportar al desarrollo de la comunidad, respetar decisiones colectivas, defender la paz y contribuir al progreso común. Señala objetivos iniciales: impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover desarrollo económico propio.</p>
-        <p>Dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa naturaleza, paz, innovación y raíces con Colombia. Es un documento transitorio que podría evolucionar en el futuro.</p>
+        <p>
+            La Carta Fundacional de Hernavia es un documento corto, pensado como 
+            la base de nuestra identidad y organización. Funciona como una “constitución” inicial 
+            que guía los pasos del proyecto mientras crece y se consolida.
+        </p>
+        <p>
+            En ella se establece al Arconte como máxima autoridad, encargado 
+            de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan 
+            instituciones más amplias. También recoge los principios fundamentales, 
+            como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, 
+            la búsqueda de innovación y la fraternidad con otras culturas.
+        </p>
+        <p>
+            Además, describe las obligaciones de los ciudadanos, que incluyen 
+            aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender 
+            la paz y contribuir al progreso común. Señala también objetivos iniciales
+            como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica 
+            y promover un desarrollo económico propio.
+        </p>
+        <p>
+            La Carta dedica un espacio a los símbolos de Hernavia, en especial la 
+            bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. 
+            Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.
+        </p>
         <a href="carta.html" class="boton">Leer completa</a>
     </section>
 
-    <section>
+    <section class="section">
         <h2>Leyes Transitorias</h2>
-        <p>Las <strong>Leyes Transitorias de Hernavia</strong> son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio, penalizaciones por incumplimiento, participación en votaciones y asambleas, administración de fondos y eliminación de datos personales en casos de renuncia.</p>
-        <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, respetando los principios de respeto, paz, innovación y unión.</p>
+        <p>
+            Las <strong>Leyes Transitorias de Hernavia</strong> son un conjunto de normas provisionales 
+            que guían el funcionamiento de la comunidad mientras se consolida la organización. 
+            Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, 
+            las penalizaciones por incumplimiento, la participación en votaciones y asambleas, 
+            la administración de fondos y la eliminación de datos personales en casos de renuncia.
+        </p>
+        <p>
+            Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación 
+            y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
+            siempre respetando los principios de respeto, paz, innovación y unión.
+        </p>
         <a href="Leyes transitorias.html" class="boton">Leer las leyes completas</a>
     </section>
 
