--- a/noticias.html
+++ b/noticias.html
@@ -4,32 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias - Hernavia</title>
-    <link rel="stylesheet" href="estilo.css">
-    <style>
-        .ups {
-            text-align: center;
-            color: gray;
-            margin-top: 50px;
-            font-size: 1.5em;
-        }
-        .botones {
-            text-align: center;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+
     <header>
         <h1>Noticias</h1>
     </header>
 
-    <div class="ups">
-        Ups… este apartado no tiene información por ahora, espera a que se actualice.
-    </div>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="Documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="preguntas.html">Preguntas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirme?</a>
+    </nav>
 
-    <div class="botones">
-        <a href="índice.html" class="boton">Volver</a>
-    </div>
+    <section class="section">
+        <h2>Ups…</h2>
+        <p>Este apartado aún no tiene información. Espera a que se actualice.</p>
+    </section>
+
+    <footer>
+        &copy; 2025 Hernavia - Proyecto Cultural
+    </footer>
 
 </body>
 </html>
