--- a/preguntas.html
+++ b/preguntas.html
@@ -9,28 +9,35 @@
         .ups {
             text-align: center;
             color: gray;
-            margin-top: 50px;
-            font-size: 1.5em;
-        }
-        .botones {
-            text-align: center;
-            margin-top: 20px;
+            font-size: 1.2em;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
+
     <header>
         <h1>Preguntas</h1>
     </header>
 
-    <div class="ups">
-        Ups… este apartado no tiene información por ahora, espera a que se actualice.
-    </div>
+    <nav>
+        <a href="índice.html">Inicio</a>
+        <a href="Documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="preguntas.html">Preguntas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
+    </nav>
 
-    <div class="botones">
-        <a href="índice.html" class="boton">Volver</a>
-    </div>
+    <section>
+        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
+    </section>
+
+    <footer>
+        &copy; 2025 Hernavia - Proyecto Cultural
+    </footer>
 
 </body>
 </html>
+
 
