--- a/indice.html
+++ b/indice.html
@@ -13,19 +13,38 @@
     </header>
 
     <nav>
-        <a href="índice.html">Inicio</a>
+        <a href="indice.html">Inicio</a>
         <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
         <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirse?</a>
+        <a href="comounirse.html">¿Cómo unirme?</a>
     </nav>
 
-    <section class="ups">
-        <h2>Noticias</h2>
-        <p>Ups… este apartado no tiene información por ahora, espera a que se actualice.</p>
+    <section id="que-es">
+        <h2>¿Qué es Hernavia?</h2>
+        <p>Hernavia es un proyecto que busca dar identidad hernaviana a la gente y acompañarla activamente en este propósito. Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales. Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora. En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
     </section>
 
+    <section id="donde">
+        <h2>¿Dónde se encuentra?</h2>
+        <p>Hernavia nace en Colombia, específicamente en el municipio Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial.</p>
+    </section>
+
+    <section id="bandera">
+        <h2>Bandera</h2>
+        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
+    </section>
+
+    <section id="significado">
+        <h2>Significado de los colores</h2>
+        <ul>
+            <li><strong>Verde:</strong> Representa la naturaleza. Su tono particular simboliza también la innovación.</li>
+            <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
+            <li><strong>Amarillo:</strong> Colocado en la franja inferior, representa las raíces con Colombia.</li>
+        </ul>
+    </section>
+    
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
