--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hernavia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo.css"> 
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="indice.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
