--- a/indice.html
+++ b/indice.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
+        <a href="indice.html">Inicio</a>
         <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
@@ -51,3 +51,4 @@
 
 </body>
 </html>
+
