--- a/simbolos.html
+++ b/simbolos.html
@@ -19,6 +19,15 @@
     <header>
         <h1>Símbolos de Hernavia</h1>
     </header>
+    
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="Documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="preguntas.html">Preguntas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirme?</a>
+    </nav>
 
     <section id="simbolos">
         <h2>Bandera</h2>
@@ -63,10 +72,6 @@
         </div>
     </section>
 
-    <div class="botones">
-        <a href="índice.html" class="boton">Volver</a>
-        <a href="documentos.html" class="boton">Documentos</a>
-    </div>
 
 </body>
 </html>
