--- a/noticias.html
+++ b/noticias.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias - Hernavia</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="estilo.css">
+    <style>
+        .ups {
+            text-align: center;
+            color: gray;
+            font-size: 1.2em;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
 
@@ -18,12 +26,11 @@
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
         <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirme?</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
     </nav>
 
-    <section class="section">
-        <h2>Ups…</h2>
-        <p>Este apartado aún no tiene información. Espera a que se actualice.</p>
+    <section>
+        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
     </section>
 
     <footer>
@@ -32,4 +39,3 @@
 
 </body>
 </html>
-
