--- a/Documentos.html
+++ b/Documentos.html
@@ -12,7 +12,7 @@
     </header>
 
     <nav>
-        <a href="índice.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
@@ -52,7 +52,7 @@
     <section class="section">
         <h2>Leyes Transitorias</h2>
         <p>
-            Las <strong>Leyes Transitorias de Hernavia</strong> son un conjunto de normas provisionales 
+            Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales 
             que guían el funcionamiento de la comunidad mientras se consolida la organización. 
             Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, 
             las penalizaciones por incumplimiento, la participación en votaciones y asambleas, 
