--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <section id="significado">
         <h2>Significado de los colores</h2>
         <ul>
-            <li><strong>Verde:</strong> Representa la naturaleza. Su tono particular simboliza también la innovación.</li>
+            <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
             <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
-            <li><strong>Amarillo:</strong> Colocado en la franja inferior, representa las raíces con Colombia.</li>
+            <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
         </ul>
     </section>
     
@@ -51,5 +51,6 @@
 
 </body>
 </html>
+
 
 
