--- a/Documentos.html
+++ b/Documentos.html
@@ -17,7 +17,7 @@
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
         <a href="simbolos.html">Símbolos</a>
-        <a href="unirme.html">¿Cómo unirse?</a>
+        <a href="comounirme.html">¿Cómo unirse?</a>
     </nav>
 
     <section class="section">
