--- a/preguntas.html
+++ b/preguntas.html
@@ -21,7 +21,7 @@
     </header>
 
     <nav>
-        <a href="índice.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
