--- a/simbolos.html
+++ b/simbolos.html
@@ -71,6 +71,10 @@
             ¡la voz hernaviana jamás callará!</p>
         </div>
     </section>
+    
+     <footer>
+        &copy; 2025 Hernavia - Proyecto Cultural
+    </footer>
 
 
 </body>
