--- a/comounirse.html
+++ b/comounirse.html
@@ -32,16 +32,21 @@
         form button:hover {
             background-color: #004a2d;
         }
-        .botones {
-            text-align: center;
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>¿Cómo unirse a Hernavia?</h1>
     </header>
+
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="Documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="preguntas.html">Preguntas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirme?</a>
+    </nav>
 
     <section id="comounirse">
         <p>Actualmente la ciudadanía por método virtual no está habilitada, aunque si lo desea puede llenar este formulario y cuando se habilite la ciudadanía virtual se le avisará y se tendrá en cuenta.</p>
@@ -60,10 +65,8 @@
         </form>
     </section>
 
-    <div class="botones">
-        <a href="índice.html" class="boton">Volver</a>
-        <a href="documentos.html" class="boton">Documentos</a>
-    </div>
-
+    <footer>
+        &copy; 2025 Hernavia - Proyecto Cultural
+    </footer>
 </body>
 </html>
