--- a/Documentos.html
+++ b/Documentos.html
@@ -46,7 +46,7 @@
             bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. 
             Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.
         </p>
-        <a href="carta.html" class="boton">Leer completa</a>
+        <a href="carta.html" class="boton">Leer carta completa</a>
     </section>
 
     <section class="section">
