--- a/carta.html
+++ b/carta.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carta Fundacional - Hernavia</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo.css">
     <style>
-        .carta {
+        /* Solo ajuste mínimo: texto justificado y legible */
+        section.carta {
             line-height: 1.6;
             text-align: justify;
-            font-size: 1.05em;
             padding: 20px;
-        }
-        .carta h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .carta h3 {
-            color: #006A44;
-            margin-top: 20px;
         }
     </style>
 </head>
@@ -29,11 +21,11 @@
 
     <nav>
         <a href="index.html">Inicio</a>
-        <a href="documentos.html">Documentos</a>
+        <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="preguntas.html">Preguntas</a>
         <a href="simbolos.html">Símbolos</a>
-        <a href="unirme.html">¿Cómo unirme?</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
     </nav>
 
     <section class="carta">
@@ -86,7 +78,7 @@
         </ol>
 
         <h3>Artículo 5 – Carácter Transitorio</h3>
-       
+        <p>
             Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
             crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
             con la participación del pueblo.
@@ -95,14 +87,11 @@
         </p>
 
         <h3>Artículo 6 – Símbolos</h3>
-         <p>
-             <h3>Bandera</h3>
+        <h4>Bandera</h4>
         <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
-            La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.
-        </p>
-        <p>
-            Arconte fundador: Hernán Coronado.
-        </p>
+        <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
+
+        <p>Arconte fundador: Hernán Coronado.</p>
     </section>
 
     <footer>
