--- a/Documentos.html
+++ b/Documentos.html
@@ -63,7 +63,7 @@
             y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
             siempre respetando los principios de respeto, paz, innovación y unión.
         </p>
-        <a href="Leyes transitorias.html" class="boton">Leer las leyes completas</a>
+        <a href="Leyes.html" class="boton">Leer las leyes completas</a>
     </section>
 
     <footer>
