--- a/Leyes.html
+++ b/Leyes.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leyes Transitorias de Hernavia</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Leyes Transitorias - Hernavia</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 
@@ -14,12 +14,14 @@
 
 <nav>
     <a href="index.html">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="#">Noticias</a>
-    <a href="#">Preguntas</a>
+    <a href="Documentos.html">Documentos</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="preguntas.html">Preguntas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
 </nav>
 
-<section>
+<section class="section">
     <h2>Ley 1 – Revocación de Ciudadanía Hernaviana</h2>
     <p>Un ciudadano podrá perder su ciudadanía de forma temporal o definitiva si incurre en alguno de los siguientes casos:</p>
     <ul>
