--- a/comounirse.html
+++ b/comounirse.html
@@ -69,11 +69,11 @@
             <label for="ciudad">País / Ciudad:</label>
             <input type="text" id="ciudad" name="ciudad" required>
 
-            <label for="ocupacion">Ocupación / Intereses (opcional):</label>
+            <label for="ocupacion">Ocupación(opcional):</label>
             <input type="text" id="ocupacion" name="ocupacion">
 
-            <label for="comentario">Motivación para unirse:</label>
-            <textarea id="comentario" name="comentario" rows="5" required></textarea>
+            <label for="comentario">Motivación para unirse(opcional)</label>
+            <textarea id="comentario" name="comentario" 
 
             <label>
                 <input type="checkbox" name="terminos" required>
