--- a/Leyes.html
+++ b/Leyes.html
@@ -12,14 +12,15 @@
     <h1>Leyes Transitorias de Hernavia</h1>
 </header>
 
-<nav>
-    <a href="index.html">Inicio</a>
-    <a href="Documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="preguntas.html">Preguntas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-</nav>
+<div id="nav-placeholder"></div>
+
+<script>
+fetch('nav.html')
+.then(response => response.text())
+.then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
+});
+</script>
 
 <section class="section">
     <h2>Ley 1 – Revocación de Ciudadanía Hernaviana</h2>
