--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         <h1>Hernavia</h1>
     </header>
 
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="Documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="preguntas.html">Preguntas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirme?</a>
-    </nav>
+<div id="nav-placeholder"></div>
+
+<script>
+fetch('nav.html')
+.then(response => response.text())
+.then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
+});
+</script>
 
     <section id="que-es">
         <h2>¿Qué es Hernavia?</h2>
@@ -51,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
