--- a/preguntas.html
+++ b/preguntas.html
@@ -20,14 +20,15 @@
         <h1>Preguntas</h1>
     </header>
 
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="Documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="preguntas.html">Preguntas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirse?</a>
-    </nav>
+   <div id="nav-placeholder"></div>
+
+<script>
+fetch('nav.html')
+.then(response => response.text())
+.then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
+});
+</script>
 
     <section>
         <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
