--- a/simbolos.html
+++ b/simbolos.html
@@ -20,14 +20,15 @@
         <h1>Símbolos de Hernavia</h1>
     </header>
     
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="Documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="preguntas.html">Preguntas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirme?</a>
-    </nav>
+<div id="nav-placeholder"></div>
+
+<script>
+fetch('nav.html')
+.then(response => response.text())
+.then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
+});
+</script>
 
     <section id="simbolos">
         <h2>Bandera</h2>
