--- a/Leyes.html
+++ b/Leyes.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leyes Transitorias - Hernavia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Hernavia</title>
+    <div id="head-placeholder"></div>
+    <script>
+        fetch('head.html')
+            .then(response => response.text())
+            .then(data => {
+                document.head.innerHTML += data;
+            });
+    </script>
 </head>
 <body>
 
