--- a/comounirse.html
+++ b/comounirse.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Cómo unirse? - Hernavia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <div id="head-placeholder"></div>
+    <script>
+        fetch('head.html')
+            .then(response => response.text())
+            .then(data => {
+                document.head.innerHTML += data;
+            });
+    </script>
+
     <style>
         form {
             max-width: 600px;
@@ -28,18 +33,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-        form button:hover {
-            background-color: #004a2d;
-        }
-        .botones {
-            text-align: center;
-            margin-top: 20px;
-        }
-        label { font-weight: bold; }
-    </style>
-</head>
+
 <body>
     <header>
         <h1>¿Cómo unirse a Hernavia?</h1>
