--- a/sugerencias.html
+++ b/sugerencias.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sugerencias - Hernavia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <div id="head-placeholder"></div>
+    <script>
+        fetch('head.html')
+            .then(response => response.text())
+            .then(data => {
+                document.head.innerHTML += data;
+            });
+    </script>
+
     <style>
         form {
             max-width: 600px;
@@ -36,6 +41,7 @@
         label { font-weight: bold; }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Envíanos tus sugerencias</h1>
