--- a/Leyes.html
+++ b/Leyes.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Hernavia</title>
-    <div id="head-placeholder"></div>
+    <title>Leyes transitorias de Hernavia</title>
     <script>
         fetch('head.html')
             .then(response => response.text())
@@ -11,7 +10,6 @@
             });
     </script>
 </head>
-<body>
 
 <header>
     <h1>Leyes Transitorias de Hernavia</h1>
