--- a/head.html
+++ b/head.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="preload" href="favicono.png" as="image">
+<link rel="icon" type="image/png" href="favicono.png">
 <link rel="stylesheet" href="estilo.css">
