--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,9 @@
-<nav class="nav-comun">
-    <a href="index.html">Inicio</a>
-    <a href="Documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="preguntas.html">Preguntas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
+<nav>
+  <a href="index.html">Inicio</a>
+  <a href="documentos.html">Documentos</a>
+  <a href="noticias.html">Noticias</a>
+  <a href="preguntas.html">Preguntas</a>
+  <a href="simbolos.html">Símbolos</a>
+  <a href="comounirse.html">¿Cómo unirse?</a>
+  <a href="sugerencias.html">Sugerencias</a>
 </nav>
