--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="nav-comun">
     <a href="index.html">Inicio</a>
     <a href="Documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
