--- a/head.html
+++ b/head.html
@@ -4,30 +4,46 @@
 <link rel="stylesheet" href="estilo.css">
 
 <style>
-/* Transición suave entre páginas */
+/* ===== Transición suave entre páginas ===== */
+
+/* visible por defecto (para que nunca se quede blanco si falla JS) */
 body {
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.5s ease-in-out;
 }
-body.loaded {
+
+/* solo si JS está activo arranca invisible */
+body.js-enabled {
+    opacity: 0;
+}
+
+/* cuando ya cargó todo vuelve a aparecer */
+body.js-enabled.loaded {
     opacity: 1;
 }
 </style>
 
 <script>
-    // Fade-in al cargar
-    window.addEventListener("DOMContentLoaded", () => {
+    // Activa el modo transición
+    document.body.classList.add("js-enabled");
+
+    // Fade-in cuando todo el contenido está listo
+    window.addEventListener("load", () => {
         document.body.classList.add("loaded");
     });
 
-    // Fade-out al cambiar de página
+    // Fade-out al hacer clic en enlaces internos
     document.addEventListener("click", function(e) {
-        if (e.target.tagName === "A" && e.target.href) {
-            e.preventDefault();
-            document.body.classList.remove("loaded");
-            setTimeout(() => {
-                window.location.href = e.target.href;
-            }, 300); 
+        const link = e.target.closest("a");
+        if (link && link.href) {
+            // solo si es la misma página (no abrir nueva ventana)
+            if (link.target !== "_blank" && link.hostname === window.location.hostname) {
+                e.preventDefault();
+                document.body.classList.remove("loaded");
+                setTimeout(() => {
+                    window.location.href = link.href;
+                }, 300);
+            }
         }
     });
 </script>
