--- a/preguntas.html
+++ b/preguntas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Preguntas - Hernavia</title>
+    <title>Proyectos - Hernavia</title>
     <div id="head-placeholder"></div>
     <script>
         fetch('head.html')
@@ -24,7 +24,7 @@
 <body>
 
     <header>
-        <h1>Preguntas</h1>
+        <h1>Proyectos</h1>
     </header>
 
    <div id="nav-placeholder"></div>
