--- a/sugerencias.html
+++ b/sugerencias.html
@@ -75,6 +75,10 @@ fetch('nav.html')
 
             <button type="submit">Enviar sugerencia</button>
         </form>
+
+        <p>o tambien puedes visitar nuestras redes sociales y hacernos las preguntas hay o simplemerte hecharle un vistaso</p>
+        Nuestro instagram:https://www.instagram.com/hernaviaoficial?igsh=MTd4MHpiZmp2anVoda==
+        Nuestro youtube:https://www.youtube.com/@Hernaviaoficial
     </section>
 
     <footer>
