--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
     <a href="index.html">Inicio</a>
     <a href="Documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
-    <a href="proyectoss.html">Preguntas</a>
+    <a href="proyectos.html">Preguntas</a>
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
